# veles-drive

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  ECOSYSTEM_INTEGRATION.md  FINAL_DEPLOYMENT_REPORT.md  FRONTEND_REBUILD_PLAN.md  FRONTEND_TECHNICAL_SPECIFICATION.md  INSOMNIA_SETUP.md  INTEGRATION_STANDARDS.md  LICENSE  PHASE_4_COMPLETION.md  PROJECT_COMPLETION_CHECKLIST.md  README.md  README_KUBERNETES.md  REGISTRATION_CHECKLIST.md  REPORT_VELES_DRIVE_RENAMING.md  TELEGRAM_BOT_DOCUMENTATION.md  TODO_SUMMARY.md  TWO_WEEKS_CHECKLIST.md  VELES_DRIVE_K8S_REPORT.md  VELES_EMPIRE_QUICKSTART.md  create-migrations-pod.yaml  debug-backend-pod.yaml  deploy.sh  docker-compose.dev.yml  docker-compose.yml  env.example  figma-config.json  final-migrate-pod.yaml  simple-migrate-pod.yaml  temp-migrate-pod.yaml  veles-auto-insomnia-collection.json
backend/: Dockerfile  Dockerfile.debug  Dockerfile.dev  Dockerfile.k8s  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  seo_templates.json
backend/app/: main.py
backend/cars/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/companies/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  settings.py  urls.py
backend/core/: admin.py  decorators.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/erp/: README.md  admin.py  apps.py  models.py  reports.py  serializers.py  signals.py  urls.py  views.py
backend/integration/: __init__.py  admin.py  apps.py  models.py  urls.py  (+4 more)
(+336 files in other folders)
